--- a/UnsplashToyProject/UnsplashToyProject/Base.lproj/Main.storyboard
+++ b/UnsplashToyProject/UnsplashToyProject/Base.lproj/Main.storyboard
@@ -1,24 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Vd-cw-z2S">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UnsplashToyProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0r5-8q-h3f">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoTableViewCell" rowHeight="100" id="FDH-wu-OWH" customClass="PhotoTableViewCell" customModule="UnsplashToyProject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FDH-wu-OWH" id="cUl-d1-X9J">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="USv-JX-jWm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="y70-aR-dzI">
+                                                    <rect key="frame" x="329" y="20" width="55" height="60"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ON7-jY-2eY">
+                                                            <rect key="frame" x="0.0" y="0.0" width="55" height="27.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9Q-f4-bX3">
+                                                            <rect key="frame" x="0.0" y="32.5" width="55" height="27.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" systemColor="systemGray6Color"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dlz-eN-J9f">
+                                                    <rect key="frame" x="20" y="25" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="J76-Ft-XjA"/>
+                                                        <constraint firstAttribute="width" constant="50" id="hYp-ym-Vm6"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="USv-JX-jWm" firstAttribute="leading" secondItem="cUl-d1-X9J" secondAttribute="leading" id="5Zx-qg-ovu"/>
+                                                <constraint firstAttribute="bottom" secondItem="y70-aR-dzI" secondAttribute="bottom" constant="20" id="AZK-3M-vUd"/>
+                                                <constraint firstAttribute="trailing" secondItem="y70-aR-dzI" secondAttribute="trailing" constant="30" id="Ep6-ry-ct3"/>
+                                                <constraint firstAttribute="trailing" secondItem="USv-JX-jWm" secondAttribute="trailing" id="N4u-0J-TAz"/>
+                                                <constraint firstItem="Dlz-eN-J9f" firstAttribute="centerY" secondItem="cUl-d1-X9J" secondAttribute="centerY" id="YJo-wB-3Zc"/>
+                                                <constraint firstItem="Dlz-eN-J9f" firstAttribute="leading" secondItem="cUl-d1-X9J" secondAttribute="leading" constant="20" id="e5d-BA-GpZ"/>
+                                                <constraint firstItem="USv-JX-jWm" firstAttribute="top" secondItem="cUl-d1-X9J" secondAttribute="top" id="fLi-ur-cW2"/>
+                                                <constraint firstItem="y70-aR-dzI" firstAttribute="top" secondItem="cUl-d1-X9J" secondAttribute="top" constant="20" id="sro-1b-p5z"/>
+                                                <constraint firstAttribute="bottom" secondItem="USv-JX-jWm" secondAttribute="bottom" id="uSy-Wb-M2g"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="photoDate" destination="u9Q-f4-bX3" id="vhz-Nf-pKZ"/>
+                                            <outlet property="photoImageView" destination="USv-JX-jWm" id="wpz-HW-D3m"/>
+                                            <outlet property="photographerName" destination="ON7-jY-2eY" id="R3p-tz-ydf"/>
+                                            <outlet property="phoyographerImage" destination="Dlz-eN-J9f" id="Pq3-no-FRv"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0r5-8q-h3f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Glc-3j-m6N"/>
+                            <constraint firstItem="0r5-8q-h3f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="S4y-lY-oYD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0r5-8q-h3f" secondAttribute="bottom" id="Tiw-L4-2qx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0r5-8q-h3f" secondAttribute="trailing" id="ulk-ZN-Syh"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Rf7-TC-RsI"/>
+                    <connections>
+                        <outlet property="tableView" destination="0r5-8q-h3f" id="pkE-nj-SsW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="892.75362318840587" y="51.5625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GxV-3I-KIc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Vd-cw-z2S" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="I98-rp-QQm">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="286-4p-VLS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cuU-9z-J5W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-17.39130434782609" y="51.5625"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
